# entrega

./: .gitignore  Cargo.toml  entrega.sublime-project  entrega.sublime-workspace  secret.key
migrations/2019-03-23-042735_users/: up.sql
migrations/2019-03-23-045956_products/: up.sql
migrations/2019-03-23-050623_orders/: down.sql  up.sql
migrations/2019-03-23-061035_admins/: up.sql
src/: main.rs  models.rs  schema.rs
src/auth/: cors.rs  mod.rs
src/database/: core.rs  mod.rs  models.rs  schema.rs
src/requests/: get_product.rs  get_product_details.rs  get_random_product.rs  login.rs  mod.rs  product_add.rs  product_remove.rs  register.rs  search_product.rs
test-scripts/: get_random_product.py  getproducts.py  login.py  newprodut.py  register.py  remove_product.py  search.py
