[package]
name = "entrega"
version = "0.1.0"
authors = ["SyS <sreyassreelal@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["handlebars_templates", "serve", "diesel_sqlite_pool","json"] }

diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
